--- a/app/src/main/res/layout/item_scheda.xml
+++ b/app/src/main/res/layout/item_scheda.xml
@@ -23,7 +23,8 @@
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:text="Scheda1"
-        android:textColor="@color/white"
+        android:textColor="@color/black"
+        android:textSize="18dp"
         android:background="@drawable/drawable_scheda"
         android:onClick="OnSchedaClick"
         android:layout_weight="1"
