--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,29 +9,54 @@
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
         android:layout_centerInParent="true"
-        >
+        android:orientation="vertical">
+
         <TextView
             android:id="@+id/testoUtenteInizia"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="BENVENUTO"
             android:layout_alignTop="@id/bottoneStart"
             android:layout_centerHorizontal="true"
+            android:layout_gravity="center"
+            android:text="Benvenuto,"
+            android:textColor="@color/black"
+            android:textSize="20dp"
+
             >
 
         </TextView>
-        <Button
-            android:id="@+id/bottoneStart"
+        <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:onClick="Inizia"
+            android:layout_centerHorizontal="true"
             android:layout_gravity="center"
-            android:text="INIZIA"
+            android:text="clicca il tasto in basso per iniziare"
+            android:textColor="@color/black"
+            android:textSize="20dp"
 
-            />
+            >
+
+        </TextView>
+
 
     </LinearLayout>
 
+    <Button
+        android:id="@+id/bottoneStart"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_gravity="center"
+        android:layout_marginStart="30dp"
+        android:layout_marginTop="30dp"
+        android:layout_marginEnd="30dp"
+        android:layout_marginBottom="30dp"
+        android:background="@drawable/drawable_scheda"
+
+        android:onClick="Inizia"
+        android:padding="10dp"
+        android:text="Let's go Buddy"
+        android:textSize="18dp" />
 </RelativeLayout>
