--- a/app/src/main/res/layout/item_esercizi.xml
+++ b/app/src/main/res/layout/item_esercizi.xml
@@ -11,10 +11,12 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="Scheda1"
+        android:textColor="@color/black"
+        android:textSize="18dp"
         android:onClick="OnSchedaClick"
         android:layout_weight="1"
         android:layout_marginRight="10dp"
-        android:background="@drawable/drawable_item_esercizio"
+        android:background="@drawable/drawable_scheda"
         >
     </Button>
     <Button
