--- a/app/src/main/res/layout/registrazione.xml
+++ b/app/src/main/res/layout/registrazione.xml
@@ -13,6 +13,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="REGISTRAZIONE"
+            android:textColor="@color/black"
             android:layout_gravity="center_horizontal"
             android:textSize="100px"
             android:layout_marginBottom="20px"
@@ -27,11 +28,11 @@
             android:padding="20px"
             >
             <TextView
-                android:layout_width="0dp"
-                android:layout_weight="1"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:gravity="center"
                 android:text="Nome:"
+                android:textColor="@color/black"
+                android:textSize="18dp"
                 android:layout_marginRight="20px"
                 >
             </TextView>
@@ -40,6 +41,7 @@
                 android:layout_width="0dp"
                 android:layout_weight="1"
                 android:layout_height="wrap_content"
+                android:layout_gravity="center"
                 >
             </EditText>
         </LinearLayout>
@@ -51,11 +53,12 @@
             android:gravity="center"
             >
             <TextView
-                android:layout_width="0dp"
-                android:layout_weight="1"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="center"
                 android:text="Cognome:"
+                android:textColor="@color/black"
+                android:textSize="18dp"
                 android:layout_marginRight="20px"
                 >
             </TextView>
@@ -75,11 +78,12 @@
             android:gravity="center"
             >
             <TextView
-                android:layout_width="0dp"
-                android:layout_weight="1"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="center"
                 android:text="Età:"
+                android:textColor="@color/black"
+                android:textSize="18dp"
                 android:layout_marginRight="20px"
                 >
             </TextView>
@@ -100,11 +104,12 @@
             android:gravity="center"
             >
             <TextView
-                android:layout_width="0dp"
-                android:layout_weight="1"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="center"
-                android:text="Nome utente:"
+                android:text="Nome Utente:"
+                android:textColor="@color/black"
+                android:textSize="18dp"
 
                 >
             </TextView>
@@ -124,11 +129,12 @@
             android:gravity="center"
             >
             <TextView
-                android:layout_width="0dp"
-                android:layout_weight="1"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="center"
                 android:text="Altezza:"
+                android:textColor="@color/black"
+                android:textSize="18dp"
 
                 >
             </TextView>
@@ -144,6 +150,8 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:text="cm"
+                android:textColor="@color/black"
+                android:textSize="18dp"
                 android:layout_weight="0.2"
                 >
 
@@ -162,6 +170,8 @@
                 android:layout_height="wrap_content"
                 android:gravity="center"
                 android:text="Peso:"
+                android:textColor="@color/black"
+                android:textSize="18dp"
                 >
             </TextView>
             <Button
@@ -172,6 +182,7 @@
                 android:tag="peso"
                 android:onClick="FunzioniInserisciRegistrazioni"
                 android:text="Inserisci"
+                android:background="@drawable/drawable_scheda"
                 >
 
             </Button>
@@ -189,6 +200,8 @@
                 android:layout_height="wrap_content"
                 android:gravity="center"
                 android:text="Misure:"
+                android:textColor="@color/black"
+                android:textSize="18dp"
 
                 >
             </TextView>
@@ -200,6 +213,7 @@
                 android:text="Inserisci"
                 android:tag="misure"
                 android:onClick="FunzioniInserisciRegistrazioni"
+                android:background="@drawable/drawable_scheda"
                 >
 
             </Button>
@@ -215,7 +229,9 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:gravity="center"
-                android:text="Kcal attuali:"
+                android:text="Kcal Attuali:"
+                android:textColor="@color/black"
+                android:textSize="18dp"
                 android:layout_weight="1"
                 >
             </TextView>
@@ -227,6 +243,7 @@
                 android:text="Inserisci"
                 android:tag="kcal"
                 android:onClick="FunzioniInserisciRegistrazioni"
+                android:background="@drawable/drawable_scheda"
                 >
             </Button>
         </LinearLayout>
@@ -242,6 +259,8 @@
                 android:layout_height="wrap_content"
                 android:gravity="center"
                 android:text="Note:"
+                android:textColor="@color/black"
+                android:textSize="18dp"
                 android:layout_weight="1"
                 >
             </TextView>
@@ -253,6 +272,7 @@
                 android:text="Inserisci"
                 android:tag="note"
                 android:onClick="FunzioniInserisciRegistrazioni"
+                android:background="@drawable/drawable_scheda"
                 >
             </Button>
         </LinearLayout>
@@ -264,6 +284,18 @@
         android:layout_alignParentBottom="true"
         >
         <Button
+            android:id="@+id/ripristinaDatiButton"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="10dp"
+            android:layout_marginTop="10dp"
+            android:text="Azzera"
+            android:background="@drawable/drawable_scheda"
+            android:textSize="18dp"
+            >
+        </Button>
+        <Button
             android:id="@+id/salvaButtonReg"
             android:layout_width="0dp"
             android:layout_weight="1"
@@ -273,33 +305,28 @@
             android:layout_marginTop="10dp"
             android:background="@drawable/drawable_scheda"
             android:layout_marginRight="10dp"
+            android:layout_marginLeft="10dp"
+            android:textSize="18dp"
 
             >
 
         </Button>
+
+
+
         <Button
             android:id="@+id/bottoneNextRegistrazione"
             android:layout_width="0dp"
             android:layout_weight="1"
             android:layout_marginRight="10dp"
             android:layout_height="wrap_content"
-            android:text="Next"
+            android:text="Avanti"
             android:layout_marginBottom="10dp"
             android:layout_marginTop="10dp"
             android:background="@drawable/drawable_scheda"
             android:textColor="@color/black"
             android:layout_gravity="center"
-            >
-        </Button>
-        <Button
-            android:id="@+id/ripristinaDatiButton"
-            android:layout_width="0dp"
-            android:layout_weight="1"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="10dp"
-            android:layout_marginTop="10dp"
-            android:text="Ripristina"
-            android:background="@drawable/drawable_scheda"
+            android:textSize="18dp"
             >
         </Button>
 
