--- a/app/src/main/res/layout/schede_pag3.xml
+++ b/app/src/main/res/layout/schede_pag3.xml
@@ -22,8 +22,10 @@
             android:layout_weight="0.2"
             android:background="@drawable/edit"
             android:onClick="EditUtente"
+
             >
         </Button>
+
         <TextView
             android:id="@+id/nomeUtente"
             android:layout_width="0dp"
@@ -31,6 +33,10 @@
             android:layout_weight="1"
             android:gravity="center"
             android:text=""
+            android:textColor="@color/black"
+            android:textSize="30dp"
+            android:layout_margin="5dp"
+
 
             ></TextView>
 
@@ -56,14 +62,16 @@
     </LinearLayout>
     <Button
         android:id="@+id/creaScheda"
-        android:layout_width="200dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Crea Scheda"
+        android:text="Nuova Scheda"
         android:onClick="CreaScheda"
-        android:background="@drawable/drawable_botton_grey"
+        android:background="@drawable/drawable_scheda"
         android:layout_marginBottom="30dp"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
+        android:textSize="18dp"
+        android:padding="10dp"
         >
     </Button>
 </RelativeLayout>
